/*
 * Copyright (c) 2025, salesforce.com, inc.
 * All rights reserved.
 * Licensed under the BSD 3-Clause license.
 * For full license text, see LICENSE.txt file in the
 * repo root or https://opensource.org/licenses/BSD-3-Clause
 */

syntax = "proto3";
package apex.stdlib;

// Root message containing the entire standard library
message StandardLibrary {
  string generated_at = 2;         // ISO timestamp
  string source_checksum = 3;      // SHA256 of source .cls files
  repeated Namespace namespaces = 4;
}

// A namespace containing types (e.g., "System", "Database", "Schema")
message Namespace {
  string name = 1;                 // e.g., "System", "Database", "Schema"
  repeated TypeSymbol types = 2;
}

// Represents a class, interface, enum, or trigger
message TypeSymbol {
  string id = 1;
  string name = 2;
  TypeKind kind = 3;
  string fqn = 4;
  SymbolLocation location = 5;
  Modifiers modifiers = 6;
  string super_class = 7;
  repeated string interfaces = 8;
  repeated Annotation annotations = 9;
  repeated MethodSymbol methods = 10;
  repeated VariableSymbol fields = 11;
  repeated VariableSymbol properties = 12;
  repeated TypeSymbol inner_types = 13;
  repeated VariableSymbol enum_values = 14;  // For enum types
  string file_uri = 15;
  string parent_id = 16;  // For inner types, points to containing type
  repeated BlockSymbol blocks = 17;  // Block symbols for this type's scope hierarchy
}

// Represents a method or constructor
message MethodSymbol {
  string id = 1;
  string name = 2;
  bool is_constructor = 3;
  TypeReference return_type = 4;
  repeated ParameterSymbol parameters = 5;
  SymbolLocation location = 6;
  Modifiers modifiers = 7;
  repeated Annotation annotations = 8;
  string parent_id = 9;
  bool has_body = 10;  // Whether the method has a body (false for abstract methods and interface methods)
  string fqn = 11;  // Fully qualified name (e.g., "system.string.valueof")
  string file_uri = 12;  // File URI (e.g., "apexlib://resources/StandardApexLibrary/System/String.cls")
}

// Represents a property, field, variable, parameter, or enum value
message VariableSymbol {
  string id = 1;
  string name = 2;
  VariableKind kind = 3;
  TypeReference type = 4;
  string initial_value = 5;
  SymbolLocation location = 6;
  Modifiers modifiers = 7;
  string parent_id = 8;
  TypeReference initializer_type = 9;  // Type of the initializer expression (if present)
  string fqn = 10;  // Fully qualified name (e.g., "system.string.empty")
  string file_uri = 11;  // File URI (e.g., "apexlib://resources/StandardApexLibrary/System/String.cls")
}

// Represents a method/constructor parameter
message ParameterSymbol {
  string id = 1;
  string name = 2;
  TypeReference type = 3;
  SymbolLocation location = 4;
  Modifiers modifiers = 5;
  string parent_id = 6;
}

// Represents a scope block (class, method, if, for, etc.)
message BlockSymbol {
  string id = 1;
  string name = 2;                    // e.g., "class_1", "method_2"
  string scope_type = 3;              // "class", "method", "block", "if", "for", etc.
  SymbolLocation location = 4;
  string parent_id = 5;               // Parent block or null for top-level
  string file_uri = 6;
}

// Represents a type reference (e.g., return type, parameter type, field type)
message TypeReference {
  string name = 1;
  string original_type_string = 2;
  bool is_array = 3;
  bool is_collection = 4;
  bool is_primitive = 5;
  bool is_built_in = 6;
  repeated TypeReference type_parameters = 7;
  TypeReference key_type = 8;  // For Map types
  string namespace = 9;
}

// Modifiers that can be applied to symbols
message Modifiers {
  Visibility visibility = 1;
  bool is_static = 2;
  bool is_final = 3;
  bool is_abstract = 4;
  bool is_virtual = 5;
  bool is_override = 6;
  bool is_transient = 7;
  bool is_test_method = 8;
  bool is_web_service = 9;
  bool is_built_in = 10;
}

// Represents an annotation (e.g., @isTest, @AuraEnabled)
message Annotation {
  string name = 1;
  SymbolLocation location = 2;
  repeated AnnotationParameter parameters = 3;
}

// Represents a parameter for an annotation
message AnnotationParameter {
  string name = 1;
  string value = 2;
}

// Location information for a symbol
message SymbolLocation {
  Range symbol_range = 1;
  Range identifier_range = 2;
}

// A range in source code
message Range {
  int32 start_line = 1;
  int32 start_column = 2;
  int32 end_line = 3;
  int32 end_column = 4;
}

// Types of type symbols
enum TypeKind {
  TYPE_KIND_UNSPECIFIED = 0;
  CLASS = 1;
  INTERFACE = 2;
  ENUM = 3;
  TRIGGER = 4;
}

// Types of variable symbols
enum VariableKind {
  VARIABLE_KIND_UNSPECIFIED = 0;
  FIELD = 1;
  PROPERTY = 2;
  PARAMETER = 3;
  VARIABLE = 4;
  ENUM_VALUE = 5;
}

// Visibility levels
enum Visibility {
  VISIBILITY_UNSPECIFIED = 0;
  PUBLIC = 1;
  PRIVATE = 2;
  PROTECTED = 3;
  GLOBAL = 4;
  DEFAULT = 5;
}

// ============================================================================
// Type Registry Messages (for GlobalTypeRegistry pre-built cache)
// ============================================================================

// Type registry entry (lightweight metadata for O(1) type lookups)
message TypeRegistryEntry {
  string fqn = 1;              // "system.exception" (lowercase normalized)
  string name = 2;             // "Exception"
  string namespace = 3;        // "System"
  TypeKind kind = 4;           // Class/Interface/Enum
  string symbol_id = 5;        // For O(1) retrieval from symbol graph
  string file_uri = 6;         // For lazy loading if needed
  bool is_stdlib = 7;          // Always true for stdlib entries
}

// Root message for type registry cache
message TypeRegistry {
  string generated_at = 1;     // ISO timestamp
  string source_checksum = 2;  // SHA256 of source .cls files
  repeated TypeRegistryEntry entries = 3;
}
